build/tests/math_wrappers/c47.h

typedef bool bool_t;
typedef int16_t calcRegister_t;
typedef mpz_t longInteger_t;
typedef struct {
  uint8_t bytes[16];
} decQuad;
typedef decQuad real34_t;
typedef struct {
  int32_t digits;
  int32_t exponent;
  uint8_t bits;
  uint16_t lsu[25];
} real_t;
typedef real_t decNumber;
enum rounding {
  DEC_ROUND_CEILING,
  DEC_ROUND_UP,
  DEC_ROUND_HALF_UP,
  DEC_ROUND_HALF_EVEN,
  DEC_ROUND_HALF_DOWN,
  DEC_ROUND_DOWN,
  DEC_ROUND_FLOOR,
  DEC_ROUND_05UP,
  DEC_ROUND_MAX,
};
typedef struct {
  int32_t digits;
  int32_t emax;
  int32_t emin;
  enum rounding round;
  uint32_t traps;
  uint32_t status;
  uint8_t clamp;
} realContext_t;
typedef realContext_t decContext;
enum {
  amRadian = 0,
  amDegree = 2,
  amNone = 5,
  amPolar = 16,
  amAngleMask = 15,
};
enum {
  dtLongInteger = 0,
  dtReal34 = 1,
  dtComplex34 = 2,
  dtTime = 3,
  dtDate = 4,
  dtString = 5,
  dtReal34Matrix = 6,
  dtComplex34Matrix = 7,
  dtShortInteger = 8,
  dtConfig = 9,
};
real34_t *decQuadAdd(real34_t *res, const real34_t *operand1, const real34_t *operand2, realContext_t *context);
real34_t *decQuadDivide(real34_t *res, const real34_t *operand1, const real34_t *operand2, realContext_t *context);
real34_t *decQuadMultiply(real34_t *res, const real34_t *operand1, const real34_t *operand2, realContext_t *context);
#define FLAG_OVERFLOW 0x800c
#define TO_BLOCKS(length) (length)
#define longIntegerIsNegative(op) (mpz_sgn(op) < 0)
#define longIntegerIsZero(op) (mpz_sgn(op) == 0)
#define longIntegerChangeSign(op) ((op)->_mp_size = -((op)->_mp_size))
#define realSetNegativeSign(operand) ((operand)->bits |= 0x80)
#define realSetPositiveSign(operand) ((operand)->bits &= 0x7f)
#define realIsSpecial(source) (((source)->bits & DECSPECIAL) != 0)
#define realIsNaN(source) (((source)->bits & (DECNAN | DECSNAN)) != 0)
#define realIsNegative(source) (((source)->bits & 0x80) != 0)
#define realIsPositive(source) (!realIsNegative(source))
#define realIsZero(source) ((source)->lsu[0] == 0 && !realIsSpecial(source))
#define realFMA(factor1, factor2, term, res, ctxt) decNumberFMA((res), (factor1), (factor2), (term), (ctxt))
#define uInt32ToReal(source, destination) decNumberFromUInt32((destination), (source))
#define real34SetPositiveSign(operand) ((operand)->bytes[15] &= 0x7f)
#define real34IsNegative(source) decQuadIsNegative((const decQuad *)(source))
#define real34Add(operand1, operand2, res) decQuadAdd((res), (operand1), (operand2), &ctxtReal34)
#define real34Divide(operand1, operand2, res) decQuadDivide((res), (operand1), (operand2), &ctxtReal34)
#define real34Multiply(operand1, operand2, res) decQuadMultiply((res), (operand1), (operand2), &ctxtReal34)
extern realContext_t ctxtReal34;
extern uint64_t shortIntegerMask;
#define real34ToReal(source, destination) decimal128ToNumber((const real34_t *)(source), (destination))
#define real34Copy(source, destination) (*(destination) = *(source))
void elementwiseRema(void (*func)(void));
void elementwiseRemaReal(void (*func)(void));
void processRealComplexMonadicFunction(void (*realf)(void), void (*complexf)(void));
void processRealComplexDyadicFunction(void (*realf)(void), void (*complexf)(void));
void processIntRealComplexMonadicFunction(void (*realf)(void),
                                         void (*complexf)(void),
                                         void (*shortintf)(void),
                                         void (*longintf)(void));
void processIntRealComplexDyadicFunction(void (*realf)(void),
                                        void (*complexf)(void),
                                        void (*shortintf)(void),
                                        void (*longintf)(void));
void reallocateRegister(calcRegister_t regist, uint32_t data_type, uint16_t data_size_without_data_len_blocks, uint32_t tag);
void convertLongIntegerRegisterToLongInteger(calcRegister_t reg, longInteger_t long_integer);
void convertShortIntegerRegisterToLongInteger(calcRegister_t reg, longInteger_t long_integer);
void convertShortIntegerRegisterToLongIntegerRegister(calcRegister_t source, calcRegister_t destination);
void convertLongIntegerRegisterToReal(calcRegister_t reg, real_t *real, realContext_t *real_context);
void convertLongIntegerRegisterToReal34Register(calcRegister_t source, calcRegister_t destination);
void convertLongIntegerToReal34(longInteger_t source, real34_t *destination);
uint32_t getRegisterTag(calcRegister_t reg);
void convertLongIntegerToLongIntegerRegister(const longInteger_t long_integer, calcRegister_t regist);
void convertLongIntegerToShortIntegerRegister(const longInteger_t long_integer, uint32_t base, calcRegister_t regist);
void convertUInt64ToShortIntegerRegister(int16_t sign, uint64_t value, uint32_t base, calcRegister_t regist);
void convertShortIntegerRegisterToUInt64(calcRegister_t reg, int16_t *sign, uint64_t *value);
void convertShortIntegerRegisterToReal(calcRegister_t source, real_t *destination, realContext_t *real_context);
void convertShortIntegerRegisterToReal34Register(calcRegister_t source, calcRegister_t destination);
void convertReal34ToLongIntegerRegister(const real34_t *real, calcRegister_t dest, enum rounding roundingMode);
void real34ToIntegralValue(const real34_t *source, real34_t *destination, enum rounding mode);
void real34Subtract(const real34_t *operand1, const real34_t *operand2, real34_t *res);
int32_t real34GetExponent(const real34_t *value);
decNumber *decNumberFMA(decNumber *result, const decNumber *lhs, const decNumber *rhs, const decNumber *term, decContext *real_context);
uint64_t WP34S_intChs(uint64_t x);
bool_t getSystemFlag(int32_t flag);
void setSystemFlag(int32_t flag);
void clearSystemFlag(int32_t flag);
void moreInfoOnError(const char *msg1, const char *msg2, const char *msg3, const char *msg4);
void elementwiseRealRema(void (*func)(void));
void elementwiseCxmaReal(void (*func)(void));
void elementwiseRealCxma(void (*func)(void));
extern uint8_t roundingMode;
#define getRegisterAngularMode(reg) (getRegisterTag(reg) & amAngleMask)
#define setComplexRegisterAngularMode(reg, am) setRegisterTag((reg), ((am) & amAngleMask) | (getRegisterTag(reg) & amPolar))
#define setComplexRegisterPolarMode(reg, pm) setRegisterTag((reg), ((((pm) & amPolar) != 0) ? (getRegisterTag(reg) & amAngleMask) : amNone) | ((pm) & amPolar))
#define getRegisterLongIntegerSign(reg) getRegisterTag(reg)
#define getRegisterShortIntegerBase(reg) getRegisterTag(reg)