src/c47/registerValueConversions.h

  void convertLongIntegerRegisterToShortIntegerRegister      (calcRegister_t source, calcRegister_t destination);
  void convertLongIntegerRegisterToReal34                    (calcRegister_t source, real34_t *destination);
  void convertLongIntegerToReal                              (longInteger_t source, real_t *destination, realContext_t *ctxt);
  void convertReal34ToLongInteger                            (const real34_t *real34, longInteger_t lgInt, enum rounding mode);