dep/decNumberICU/decQuad.h

  extern decQuad * decQuadFromInt32(decQuad *, int32_t);
  extern decQuad * decQuadFromUInt32(decQuad *, uint32_t);
  extern int32_t   decQuadToInt32(const decQuad *, decContext *, enum rounding);
  extern decQuad * decQuadSubtract(decQuad *, const decQuad *, const decQuad *, decContext *);
  extern decQuad * decQuadToIntegralValue(decQuad *, const decQuad *, decContext *, enum rounding);
  extern decQuad * decQuadCopyAbs(decQuad *, const decQuad *);