zig_src/shell/register_value_conversions.zig


// ---------------------------------------------------------------------------
// GMP externs
// ---------------------------------------------------------------------------
// GMP exports its symbols with the __gmpz_ prefix (mpz_* are header macros).
extern fn __gmpz_init(p: *mpz_struct) void;
extern fn __gmpz_init2(p: *mpz_struct, bits: c_ulong) void;
extern fn __gmpz_clear(p: *mpz_struct) void;
extern fn __gmpz_set_ui(p: *mpz_struct, v: c_ulong) void;
extern fn __gmpz_add_ui(r: *mpz_struct, op: *const mpz_struct, c: c_ulong) void;
extern fn __gmpz_mul_ui(r: *mpz_struct, op: *const mpz_struct, c: c_ulong) void;
extern fn __gmpz_mul_2exp(r: *mpz_struct, op: *const mpz_struct, c: c_ulong) void;
extern fn __gmpz_fdiv_ui(op: *const mpz_struct, c: c_ulong) c_ulong;
extern fn __gmpz_get_str(str: [*c]u8, radix: c_int, op: *const mpz_struct) [*c]u8;
extern fn __gmpz_sizeinbase(op: *const mpz_struct, base: c_int) usize;
const mpz_init = __gmpz_init;
const mpz_init2 = __gmpz_init2;
const mpz_clear = __gmpz_clear;
const mpz_set_ui = __gmpz_set_ui;
const mpz_add_ui = __gmpz_add_ui;
const mpz_mul_ui = __gmpz_mul_ui;
const mpz_mul_2exp = __gmpz_mul_2exp;
const mpz_fdiv_ui = __gmpz_fdiv_ui;
const mpz_get_str = __gmpz_get_str;
const mpz_sizeinbase = __gmpz_sizeinbase;

// ---------------------------------------------------------------------------
// DMCP / PC date path
// ---------------------------------------------------------------------------
const dt_t = abi.DateShort;
const tm_t = abi.TimeShort;
const Tm = abi.Tm;
extern fn time(t: ?*i64) i64;
extern fn localtime(t: *const i64) *Tm;

// ---------------------------------------------------------------------------
// Inline wrappers (the C macros)
// ---------------------------------------------------------------------------
inline fn moreInfoOnError(m1: [*:0]const u8, m2: ?[*:0]const u8) void {
    if (comptime extra_info) c_moreInfoOnError(m1, m2, null, null);
}
// dataPtr moved to engine/kernel/register_convert_bulk.zig.
const reg34 = abi.registerReal34;
// regImag34 moved to engine/kernel/register_convert_bulk.zig.
// regLongIntData moved to engine/kernel/register_convert_bulk.zig.
const regShortInt = abi.registerShortInteger;
// regMatrixHeader moved to engine/kernel/register_convert_bulk.zig.
// regRealMatrixElems moved to engine/kernel/register_convert_bulk.zig.
// regComplexMatrixElems moved to engine/kernel/register_convert_bulk.zig.
// getRegisterAngularMode moved to engine/kernel/register_convert_bulk.zig.
inline fn getRegisterShortIntegerBase(reg: calcRegister_t) u32 {
    return getRegisterTag(reg);
}
inline fn getRegisterLongIntegerSign(reg: calcRegister_t) u32 {
    return getRegisterTag(reg);
}
// setComplexRegisterAngularMode moved to engine/kernel/register_convert_bulk.zig.
// setComplexRegisterPolarMode moved to engine/kernel/register_convert_bulk.zig.
const amNoneU: u32 = @bitCast(amNone);

// TO_BLOCKS / TO_BYTES
// toBlocks moved to engine/kernel/register_convert_bulk.zig.
inline fn toBytes(n: u16) u32 {
    return @as(u32, n) << 2;
}

// long integer helpers.
// longIntegerSizeInBytes moved to engine/kernel/register_convert_bulk.zig.
// longIntegerSignTag moved to engine/kernel/register_convert_bulk.zig.
inline fn longIntegerIsNegative(lg: *const mpz_struct) bool {
    return lg._mp_size < 0;
}
inline fn longIntegerIsZero(lg: *const mpz_struct) bool {
    return lg._mp_size == 0;
}
// longIntegerChangeSign moved to engine/kernel/register_convert_bulk.zig.
inline fn absI(x: c_int) u32 {
    return if (x < 0) @intCast(-x) else @intCast(x);
}

// real34 bit macros.
inline fn real34IsNegative(v: *align(1) const real34_t) bool {
    return (v.bytes[15] & 0x80) == 0x80;
}
inline fn real34SetNegativeSign(v: *real34_t) void {
    v.bytes[15] |= 0x80;
}
inline fn real34SetPositiveSign(v: *real34_t) void {
    v.bytes[15] &= 0x7f;
}
inline fn real34Copy(src: *align(1) const real34_t, dst: *real34_t) void {
    dst.* = src.*;
}

// real bit macros.
// realIsNaN moved to engine/kernel/register_convert_bulk.zig.
// realIsNegative moved to engine/kernel/register_convert_bulk.zig.
// realIsPositive moved to engine/kernel/register_convert_bulk.zig.
// realIsSpecial moved to engine/kernel/register_convert_bulk.zig.
// realIsZero moved to engine/kernel/register_convert_bulk.zig.
// realSetPositiveSign moved to engine/kernel/register_convert_bulk.zig.
inline fn realSetNegativeSign(v: *real_t) void {
    v.bits |= 0x80;
}
// realGetExponent moved to engine/kernel/register_convert_bulk.zig.

// real34 ops (use &ctxtReal34).
inline fn uInt32ToReal34(src: u32, dst: *real34_t) void {
    _ = decQuadFromUInt32(dst, src);
}
inline fn int32ToReal34(src: i32, dst: *real34_t) void {
    _ = decQuadFromInt32(dst, src);
}
// real34FMA moved to engine/kernel/register_convert_bulk.zig.
inline fn real34Add(a: *align(1) const real34_t, b: *align(1) const real34_t, res: *real34_t) void {
    _ = decQuadAdd(res, a, b, &ctxtReal34);
}
inline fn real34Subtract(a: *align(1) const real34_t, b: *align(1) const real34_t, res: *real34_t) void {
    _ = decQuadSubtract(res, a, b, &ctxtReal34);
}
inline fn real34Multiply(a: *align(1) const real34_t, b: *align(1) const real34_t, res: *real34_t) void {
    _ = decQuadMultiply(res, a, b, &ctxtReal34);
}
inline fn real34Divide(a: *align(1) const real34_t, b: *align(1) const real34_t, res: *real34_t) void {
    _ = decQuadDivide(res, a, b, &ctxtReal34);
}
inline fn real34CopyAbs(src: *align(1) const real34_t, dst: *real34_t) void {
    _ = decQuadCopyAbs(dst, src);
}
inline fn real34ToIntegralValue(src: *align(1) const real34_t, dst: *real34_t, mode: c_int) void {
    _ = decQuadToIntegralValue(dst, src, &ctxtReal34, mode);
}
// real34GetCoefficient moved to engine/kernel/register_convert_bulk.zig.
// real34GetExponent moved to engine/kernel/register_convert_bulk.zig.
inline fn real34ToInt32(src: *align(1) const real34_t) i32 {
    return decQuadToInt32(src, &ctxtReal34, DEC_ROUND_DOWN);
}
// real34ToReal moved to engine/kernel/register_convert_bulk.zig.
// stringToReal34 moved to engine/kernel/register_convert_bulk.zig.

// real ops.
// uInt32ToReal moved to engine/kernel/register_convert_bulk.zig.
inline fn realFMA(f1: *align(1) const real_t, f2: *align(1) const real_t, term: *align(1) const real_t, res: *real_t, ctx: *realContext_t) void {
    _ = decNumberFMA(res, f1, f2, term, ctx);
}
// realGetCoefficient moved to engine/kernel/register_convert_bulk.zig.
// realPlus moved to engine/kernel/register_convert_bulk.zig.
// stringToReal moved to engine/kernel/register_convert_bulk.zig.

// ===========================================================================
// Long integer <-> register
// ===========================================================================
// convertLongIntegerToLongIntegerRegister moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertLongIntegerToLongIntegerRegister(lgInt: *const mpz_struct, regist: calcRegister_t) callconv(.c) void;

// convertLongIntegerRegisterToLongInteger moved to engine/kernel/register_integer_convert.zig.
pub extern fn convertLongIntegerRegisterToLongInteger(regist: calcRegister_t, lgInt: *mpz_struct) callconv(.c) void;

// convertLongIntegerRegisterToReal34Register moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertLongIntegerRegisterToReal34Register(source: calcRegister_t, destination: calcRegister_t) callconv(.c) void;

// convertLongIntegerRegisterToReal34 moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertLongIntegerRegisterToReal34(source: calcRegister_t, destination: *real34_t) callconv(.c) void;

// convertLongIntegerRegisterToReal moved to engine/kernel/register_integer_convert.zig.
pub extern fn convertLongIntegerRegisterToReal(source: calcRegister_t, destination: *real_t, ctxt: *realContext_t) callconv(.c) void;

// convertLongIntegerToReal moved to engine/kernel/register_integer_convert.zig.

// convertLongIntegerToReal34 moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertLongIntegerToReal34(source: *mpz_struct, destination: *real34_t) callconv(.c) void;

pub export fn convertLongIntegerToShortIntegerRegister(lgInt: *mpz_struct, base: u32, destination: calcRegister_t) callconv(.c) void {
    var u64v: u64 = undefined;
    var overflow: bool = undefined;

    reallocateRegister(destination, dtShortInteger, SHORT_INTEGER_SIZE_IN_BLOCKS, base);
    if (longIntegerIsZero(lgInt)) {
        regShortInt(destination).* = 0;
    } else {
        if (comptime is32) {
            const d32: [*]u32 = @ptrCast(lgInt._mp_d);
            u64v = d32[0];
            if (absI(lgInt._mp_size) > 1) {
                u64v |= @as(u64, d32[1]) << 32;
            }
            overflow = absI(lgInt._mp_size) > 2 or (u64v & shortIntegerMask) != u64v;
            regShortInt(destination).* = u64v & shortIntegerMask;
        } else {
            const d64: [*]u64 = @ptrCast(lgInt._mp_d);
            u64v = d64[0];
            overflow = absI(lgInt._mp_size) > 1 or (u64v & shortIntegerMask) != u64v;
            regShortInt(destination).* = u64v & shortIntegerMask;
        }

        if (longIntegerIsNegative(lgInt)) {
            clearSystemFlag(@bitCast(FLAG_OVERFLOW));
            regShortInt(destination).* = frontier_integers.WP34S_intChs(regShortInt(destination).*);
        }

        if (overflow and !getSystemFlag(FLAG_OVERFLOW)) {
            setSystemFlag(@bitCast(FLAG_OVERFLOW));
        }
    }
}

pub export fn convertLongIntegerRegisterToShortIntegerRegister(source: calcRegister_t, destination: calcRegister_t) callconv(.c) void {
    var lgInt: mpz_struct = undefined;

    convertLongIntegerRegisterToLongInteger(source, &lgInt);
    convertLongIntegerToShortIntegerRegister(&lgInt, 10, destination);
    mpz_clear(&lgInt);
}

// ===========================================================================
// Short integer <-> register
// ===========================================================================
// convertShortIntegerRegisterToReal34Register moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertShortIntegerRegisterToReal34Register(source: calcRegister_t, destination: calcRegister_t) callconv(.c) void;

// convertShortIntegerRegisterToReal moved to engine/kernel/register_integer_convert.zig.
pub extern fn convertShortIntegerRegisterToReal(source: calcRegister_t, destination: *real_t, ctxt: *realContext_t) callconv(.c) void;

// convertShortIntegerRegisterToUInt64 moved to engine/kernel/register_integer_convert.zig.
pub extern fn convertShortIntegerRegisterToUInt64(regist: calcRegister_t, sign: *i16, value: *u64) callconv(.c) void;

// convertShortIntegerRegisterToLongInteger moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertShortIntegerRegisterToLongInteger(source: calcRegister_t, lgInt: *mpz_struct) callconv(.c) void;

// convertShortIntegerRegisterToLongIntegerRegister moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertShortIntegerRegisterToLongIntegerRegister(source: calcRegister_t, destination: calcRegister_t) callconv(.c) void;

// convertUInt64ToShortIntegerRegister moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertUInt64ToShortIntegerRegister(sign: i16, value_arg: u64, base: u32, regist: calcRegister_t) callconv(.c) void;

// ===========================================================================
// real34 / real <-> long integer
// ===========================================================================
// convertReal34ToLongInteger moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertReal34ToLongInteger(re34: *align(1) const real34_t, lgInt: *mpz_struct, roundingMode: c_int) callconv(.c) void;

// convertReal34ToLongIntegerRegister moved to engine/kernel/register_convert_bulk.zig.
pub extern fn convertReal34ToLongIntegerRegister(real34: *align(1) const real34_t, dest: calcRegister_t, roundingMode: c_int) callconv(.c) void;
